# verus

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Taskfile.yml
.claude/: settings.local.json
dependencies/prettyplease/: BUILD.bazel
dependencies/syn/: BUILD.bazel
